// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBar renders 1`] = `
<form
  className="SearchBar"
>
  <input
    data-testid="search"
    placeholder="Search..."
    type="text"
    value=""
  />
  <label
    htmlFor="inStockOnly"
    style={
      Object {
        "display": "block",
      }
    }
  >
    <input
      checked={false}
      data-testid="instock-toggle"
      name="inStockOnly"
      type="checkbox"
    />
    Only show products in stock
  </label>
</form>
`;

exports[`SearchBar with filter text renders 1`] = `
<form
  className="SearchBar"
>
  <input
    data-testid="search"
    placeholder="Search..."
    type="text"
    value="Football"
  />
  <label
    htmlFor="inStockOnly"
    style={
      Object {
        "display": "block",
      }
    }
  >
    <input
      checked={false}
      data-testid="instock-toggle"
      name="inStockOnly"
      type="checkbox"
    />
    Only show products in stock
  </label>
</form>
`;

exports[`SearchBar with in stock only renders 1`] = `
<form
  className="SearchBar"
>
  <input
    data-testid="search"
    placeholder="Search..."
    type="text"
    value=""
  />
  <label
    htmlFor="inStockOnly"
    style={
      Object {
        "display": "block",
      }
    }
  >
    <input
      checked={true}
      data-testid="instock-toggle"
      name="inStockOnly"
      type="checkbox"
    />
    Only show products in stock
  </label>
</form>
`;
